Fix vertical spacing on items

--- a/src/components/data-list/_data-list.scss
+++ b/src/components/data-list/_data-list.scss
@@ -21,12 +21,15 @@
 
   .govuk-data-list__item {
     display: block;
-    padding: govuk-spacing(3);
+    padding-left: govuk-spacing(2);
+    padding-right: govuk-spacing(2);
     margin: 0;
     padding-left: 0;
 
     @include govuk-media-query($from: tablet) {
       display: table-cell;
+      padding-top: govuk-spacing(2);
+      padding-bottom: govuk-spacing(2);
       border-bottom: 1px solid $govuk-border-colour;
     }
   }
